# optimized_transducer

./: .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/workflows/: build-cpu.yml  build-cuda.yml  publish_to_pypi.yml  run-tests-cpu.yml
cmake/: moderngpu.cmake  pybind11.cmake
optimized_transducer/csrc/: CMakeLists.txt  cpu.cc  cuda.cu  kernels.cu  kernels.h  moderngpu-allocator.h  transducer-loss.cc  transducer-loss.h
optimized_transducer/python/csrc/: CMakeLists.txt  optimized_transducer.cc  optimized_transducer.h
optimized_transducer/python/optimized_transducer/: __init__.py  torch_version.py.in  transducer_loss.py
optimized_transducer/python/tests/: CMakeLists.txt  test_compute_transducer_loss.py  test_cuda.py  test_log_softmax.py  test_max_symbol_per_frame.py
scripts/: check_style_cpplint.sh
scripts/github_actions/: install_cuda.sh  install_cudnn.sh  install_torch.sh
